--- a/index.html
+++ b/index.html
@@ -66,10 +66,13 @@
                              <label for="model">AI Model:</label>
                              <!-- Add models suitable for text generation/editing -->
                              <select id="model" name="model">
-                                <option value="gemini-1.5-flash-latest" selected>Gemini 1.5 Flash (Fast)</option>
-                                <option value="gemini-1.5-pro-latest">Gemini 1.5 Pro (Advanced)</option>
-                                <!-- Add other compatible models if available -->
-                                <!-- <option value="gemini-2.0-flash">Gemini 2.0 Flash</option> -->
+                                <option value="gemini-2.5-pro-exp-03-25" selected>Gemini 2.5 Pro (Experimental)</option>
+                                <option value="gemini-2.0-flash">Gemini 2.0 Flash</option>
+                                <option value="gemini-2.0-pro">Gemini 2.0 Pro</option>
+                                <option value="gemini-2.0-flash-lite">Gemini 2.0 Flash Lite</option>
+                                <option value="gemini-1.5-flash-latest">Gemini 1.5 Flash</option>
+                                <option value="gemini-1.5-pro-latest">Gemini 1.5 Pro</option>
+                                <option value="gemini-1.5-flash-8b">Gemini 1.5 Flash 8b</option>
                              </select>
                              <div class="save-setting-container">
                                  <input type="checkbox" id="save-model-checkbox">
