--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Enhanced Grammar Checker PWA</title>
+    <title>Text Right</title>
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#2A4B7C">
     <link rel="icon" href="images/icon-192.png" sizes="192x192" type="image/png">
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Grammar & Style Check</h1>
+            <h1>Text Right</h1>
             <button id="theme-toggle" class="header-btn" title="Toggle Dark/Light Mode" aria-label="Toggle Dark/Light Mode">☀️</button>
         </div>
 
