--- a/index.html
+++ b/index.html
@@ -148,8 +148,11 @@
             <div>
                 <label for="model-select" class="block text-sm font-medium text-gray-600 dark:text-gray-400 mb-1">AI Model</label>
                 <select id="model-select" class="w-full p-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 focus:ring-2 focus:ring-primary-500">
-                    <option value="gemini-1.5-flash-latest">Gemini 1.5 Flash (Default)</option>
-                    <option value="gemini-pro">Gemini 1.0 Pro</option>
+                    <option value="gemini-2.5-pro">Gemini 2.5 Pro (Default)</option>
+                    <option value="gemini-2.5-flash">Gemini 2.5 Flash</option>
+                    <option value="gemini-2.5-flash-lite">Gemini 2.5 Flash Lite</option>
+                    <option value="gemini-2.0-flash">Gemini 2.0 Flash</option>
+                    <option value="gemini-2.0-flash-lite">Gemini 2.0 Flash Lite</option>
                 </select>
                 <p class="text-xs text-gray-500 mt-2">Different models have varying speeds and capabilities.</p>
             </div>
